--- a/api/package.json
+++ b/api/package.json
@@ -6,20 +6,14 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "db-push": "prisma db push --skip-generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "http-errors": "^2.0.0",
-    "knex": "^3.1.0",
-    "mysql": "^2.18.1",
-    "prisma": "^5.15.1"
+    "http-errors": "^2.0.0"
   }
 }
